# TMP-4

./: CMakeLists.txt
lab-6211-qpainter/: CMakeLists.txt  main.cpp
lab-6212-qlistwidget/: CMakeLists.txt  main.cpp
